--- a/index_4_news.html
+++ b/index_4_news.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PMC LICH NEWS</title>
+    <title>PMC LICH MAIN MENU</title>
     <link href="style_CSS.css" rel="stylesheet" type="text/css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
@@ -18,27 +18,41 @@
     </style>
 </head>
 <body>
-    <div class="frame_win" id="news_id">
+    <div class="fon">
+    <div class="frame_win">
         <div class="header">
             <div class="left_corner"></div>
                 <div class="header_rect">
-                <a href="index_3_main_menu.html" class="main_menu_link">Главная</a>
-                <a href="index_4_news.html" class="news_link">Новости</a>
-                <a href="index_5_archive.html" class="archive_link">Архив</a>
-                <a href="index_6_operations.html" class="operations_link">Операции</a>
-                <a href="index_7_map.html" class="map_link">Карта</a>
-            </div>
-            <div class="right_corner"></div>
+                    <a href="index_3_main_menu.html" class="navig main_menu_link">Главная</a>
+                    <a href="index_4_news.html" class="navig news_link">Новости</a>
+                    <a href="index_5_archive.html" class="navig archive_link">Архив</a>
+                    <a href="index_6_operations.html" class="navig operations_link">Операции</a>
+                    <a href="index_7_map.html" class="navig map_link">Карта</a>
+                </div>
+            <div class="right_corner"></div>    
         </div>
+        
         <div class="left_main_corner"></div>
         <div class="right_main_corner"></div>
         <div class="first_background_image"></div>
         <div class="second_background_image"></div>
         <div class="third_background_image"></div>
-        <div class="four_background_image"></div>
+        <div class="four_background_image"></div>        
         <div class="main_win">
-            <p class="lock">НЕДОСТУПНО</p>
+            <div class="art_block">
+                <div class="logo_image"></div>
+                <div class="left_corner_art"></div>
+                <div class="oval_art"></div>
+                <div class="right_corner_art"></div>
+            </div>
+            <p class="main_desc_1">ЧВК Л.И.Ч. - передовая лидирующая корпорация по предоставлению военных услуг всем лицам, которые могут себе это позволить.
+                Корпорация стремительно развивается и по сей день, привлекая к работе сотни граждан ежемесячно. Корпорация раскинула свои сети по всему миру и космосу в пределах солнечной системы. Совершенные боевые технологии помогают ЛИЧу удерживать свои позиции много веков с момента основания. 
+            </p>
+            <p class="main_desc_2">К 2780 году корпорация насчитывает штат до 1000000 сотрудников и готовых к сражению солдат.
+                Для корпорации нет каких либо этических и моральных правил, Главный принципц ЛИЧа - Выполнить заказ быстро, тихо (громко по желанию заказчика) и максимально эффективно, используя для этого все возможные средства.
+                Сила ЛИЧа, следуя уличным слухам, в его неубиваемости. Лишь ЛИЧ может уничтожить себя, но ни один из ныне жывущих людей.</p>
         </div>
+    </div>
     </div>
 </body>
 </html>
