--- a/index_6_operations.html
+++ b/index_6_operations.html
@@ -8,13 +8,6 @@
     <link href="style_CSS.css" rel="stylesheet" type="text/css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
-        body {
-            background-image: url(Whaleloooool.github.io/LICH/images/craiyon_224304_futuristic_skyscraper_in_rainy_night_and_cyberpunk_style_and_red_tones);
-            background-position: left bottom;
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
     </style>
 </head>
 <body>
@@ -22,13 +15,13 @@
         <div class="header">
             <div class="left_corner"></div>
                 <div class="header_rect">
-                <a href="index_3_main_menu.html" class="main_menu_link">Главная</a>
-                <a href="index_4_news.html" class="news_link">Новости</a>
-                <a href="index_5_archive.html" class="archive_link">Архив</a>
-                <a href="index_6_operations.html" class="operations_link">Операции</a>
-                <a href="index_7_map.html" class="map_link">Карта</a>
-            </div>
-            <div class="right_corner"></div>
+                    <a href="index_3_main_menu.html" class="navig main_menu_link">Главная</a>
+                    <a href="index_4_news.html" class="navig news_link">Новости</a>
+                    <a href="index_5_archive.html" class="navig archive_link">Архив</a>
+                    <a href="index_6_operations.html" class="navig operations_link">Операции</a>
+                    <a href="index_7_map.html" class="navig map_link">Карта</a>
+                </div>
+            <div class="right_corner"></div>    
         </div>
         <div class="left_main_corner"></div>
         <div class="right_main_corner"></div>
